tests/Rules/Structure/Fixtures/invalid/frame_no_title.html.twig
<frame src="page1.html">
